fix: app list spacing

--- a/src/web/sass/index.scss
+++ b/src/web/sass/index.scss
@@ -10,25 +10,27 @@
 		margin: 1em 0 0;
 		border-bottom: 1px solid #d7d7d7;
 	}
-	.item{
-		padding-right: 50px;
-		margin-top: 30px;
-		&:nth-child(4n){
-			padding-right: 0;
-		}
-		width: 160px;
-		height: 160px;
-		display:inline-block;
-		text-align: center;
-		cursor: pointer;
-		img{
-			width: 96px;
-			margin-bottom: 20px;
-		}
-		span{
-			white-space:nowrap;
-			font-size: 16px;
-			font-weight: normal;
+	.items{
+		.item{
+			padding-right: 50px;
+			margin-top: 30px;
+			width: 160px;
+			height: 160px;
+			display:inline-block;
+			text-align: center;
+			cursor: pointer;
+			img{
+				width: 96px;
+				margin-bottom: 20px;
+			}
+			span{
+				white-space:nowrap;
+				font-size: 16px;
+				font-weight: normal;
+			}
+			&:nth-child(4n){
+				padding-right: 0;
+			}
 		}
 	}
 }
